--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "@somescope/one",
+  "name": "@somescope/app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "peerDependencies": {
     "react": "^16.13.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
   }
 }
