--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@somescope/two",
+  "name": "@somescope/components",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
